# BattleShipGame

./: CMakeLists.txt  README.md  commands.sh
src/: CMakeLists.txt  battle.cpp  main.cpp
tests/: CMakeLists.txt
